apps/production/cvat/redis-inmem.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cvat-redis-inmem
  labels:
    app: cvat
    role: redis-inmem
spec:
  serviceName: cvat-redis-inmem
  replicas: 1
  selector:
    matchLabels:
      app: cvat
      role: redis-inmem
  template:
    metadata:
      labels:
        app: cvat
        role: redis-inmem
    spec:
      automountServiceAccountToken: false
      containers:
        - name: redis
          image: redis:7.4.11-alpine@sha256:ff02b58f971e7d7d156a1267e283fcbbeee91773b6aa36c49dac28ecfe28eadf
          args:
            - redis-server
            - --save
            - "60"
            - "100"
            - --appendonly
            - "yes"
          ports:
            - name: redis
              containerPort: 6379
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "1Gi"
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-data
          hostPath:
            path: /mnt/thedatapool/app-data/cvat/redis-inmem-data
---
apiVersion: v1
kind: Service
metadata:
  name: cvat-redis-inmem
  labels:
    app: cvat
    role: redis-inmem
spec:
  selector:
    app: cvat
    role: redis-inmem
  ports:
    - name: redis
      port: 6379
      targetPort: redis
